# vtk-mcp

./: .dockerignore  .flake8  .gitignore  Dockerfile  LICENSE  README.md  TOOLS.md  database.Dockerfile  deploy.Dockerfile  docker-compose.yml  pyproject.toml  test.Dockerfile  vtk-examples-db.dockerfile
.github/workflows/: ci.yml
deploy/: vtk-mcp-server-compose.yml  vtk-mcp-server-deploy.yml  vtk-mcp-server.service
rag-components/: .gitignore  LICENSE  README.md  chat.py  populate_db.py  query_db.py  requirements.txt
scripts/: prefetch_artifacts.py
share/: vtk-mcp-server-deploy.yml
src/vtk_mcp/: __init__.py  __main__.py  client.py  composition.py  config.py  server.py
src/vtk_mcp/tools/: __init__.py  docs.py  scraping.py  search.py  validation.py  vtk_scraper.py
src/vtk_mcp/transport/: __init__.py  http.py  stdio.py
src/vtk_mcp_server/: __init__.py  cli.py  import_validator.py  server.py  simple_client.py  vtk_scraper.py
tests/: conftest.py  test_client_no_server.py  test_http_integration.py  test_server_functions.py  test_stdio_integration.py  test_tools.py  test_vector_search_integration.py
