[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vtk-mcp-server"
version = "0.1.0"
description = "MCP server for VTK class documentation"
authors = [{name = "Vicente Adolfo Bolea Sanchez", email = "vicente.bolea@kitware.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastmcp>=2.0.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "lxml>=4.9.0",
    "click>=8.0.0",
    "vtk",
]

[project.scripts]
vtk-mcp-server = "vtk_mcp_server.server:main"
vtk-mcp-client = "vtk_mcp_server.simple_client:main"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "responses>=0.23.0",
    "httpx>=0.24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/vtk_mcp_server"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/README.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "unit: Unit tests that don't require external services",
    "integration: Integration tests that require server/client interaction",
    "http: HTTP transport integration tests",
    "stdio: Stdio transport integration tests",
    "slow: Tests that take longer to run",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
