[project]
name = "vtk-mcp-server"
dynamic = ["version"]
description = "MCP server for VTK class documentation"
authors = [{name = "Vicente Adolfo Bolea Sanchez", email = "vicente.bolea@kitware.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["vtk", "mcp", "model-context-protocol", "documentation", "visualization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "fastmcp>=2.0.0",
    "beautifulsoup4>=4.12.0",
    "importlib_resources>=5.0.0",
    "requests>=2.31.0",
    "lxml>=4.9.0",
    "click>=8.0.0",
    "vtk-data>=1.0.0",
]

[project.scripts]
vtk-mcp-server = "vtk_mcp_server.server:main"
vtk-mcp-client = "vtk_mcp_server.simple_client:main"

[project.optional-dependencies]
rag = [
    "vtk-data[rag]>=1.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "responses>=0.23.0",
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/kitware/vtk-mcp"
Documentation = "https://github.com/kitware/vtk-mcp/blob/master/README.md"
Repository = "https://github.com/kitware/vtk-mcp"
Issues = "https://github.com/kitware/vtk-mcp/issues"

[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "0.1.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "unit: Unit tests that don't require external services",
    "integration: Integration tests that require server/client interaction",
    "http: HTTP transport integration tests",
    "stdio: Stdio transport integration tests",
    "vector_search: Vector search integration tests (requires podman and embeddings database)",
    "slow: Tests that take longer to run",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
