[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vtk-mcp"
version = "1.0.0"
description = "Production MCP gateway composing vtk-knowledge, vtk-index, and vtk-validate"
authors = [{name = "Patrick O'Leary"}, {name = "Vicente Adolfo Bolea Sanchez", email = "vicente.bolea@kitware.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["vtk", "mcp", "model-context-protocol", "documentation", "visualization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "lxml>=4.9.0",
    "click>=8.0.0",
    "vtk-knowledge>=1.0.0",
    "vtk-validate>=1.0.0",
]

[project.scripts]
vtk-mcp = "vtk_mcp.__main__:main"

[project.optional-dependencies]
retrieval = [
    "vtk-index>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "responses>=0.23.0",
    "httpx>=0.24.0",
    "ruff>=0.8.0",
]

[project.urls]
Homepage = "https://github.com/Kitware/vtk-mcp"
Repository = "https://github.com/Kitware/vtk-mcp"
Issues = "https://github.com/Kitware/vtk-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/vtk_mcp"]

[tool.uv.sources]
vtk-knowledge = { git = "https://github.com/vicentebolea/vtk-knowledge" }
vtk-validate = { git = "https://github.com/vicentebolea/vtk-validate" }
vtk-index = { git = "https://github.com/vicentebolea/vtk-index" }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["src"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "unit: Unit tests that don't require external services",
    "integration: Integration tests that require server/client interaction",
    "http: HTTP transport integration tests",
    "stdio: Stdio transport integration tests",
    "vector_search: Vector search integration tests (requires podman and embeddings database)",
    "slow: Tests that take longer to run",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["vtk_mcp"]
